使用 select2 选择下拉框数据

--- a/chendian/templates/frontend/base.html
+++ b/chendian/templates/frontend/base.html
@@ -10,12 +10,16 @@
     <link rel="stylesheet" href="http://tmp-images.qiniudn.com/bootstrap-3.3.2/css/bootstrap.min.css" />
     <link rel="stylesheet" href="http://tmp-images.qiniudn.com/bootstrap-fileinput-4.1.9/css/fileinput.min.css" />
     <link href="http://tmp-images.qiniudn.com/x-editable-1.5.1/bootstrap3-editable/css/bootstrap-editable.css" rel="stylesheet"/>
+    <link href="http://7jpohw.com1.z0.glb.clouddn.com/select2-4.0.0/dist/css/select2.min.css" rel="stylesheet"/>
 
     <link rel="stylesheet" href="{{ STATIC_URL }}css/site.css?12345" />
 
     <style>
       body {
         padding-top: 70px;
+      }
+      span.select2-container {
+        width: 100% !important;
       }
     </style>
 
@@ -136,9 +140,10 @@
     <script src="http://tmp-images.qiniudn.com/chendian/libs/react-0.13.3/build/react.min.js"</script>
     <script src="http://tmp-images.qiniudn.com/bootstrap-fileinput-4.1.9/js/fileinput.min.js"></script>
     <script src="http://tmp-images.qiniudn.com/x-editable-1.5.1/bootstrap3-editable/js/bootstrap-editable.min.js"></script>
+    <script src="http://7jpohw.com1.z0.glb.clouddn.com/select2-4.0.0/dist/js/select2.min.js"></script>
     <script src="{{ STATIC_URL }}js/site.js?1234"></script>
     <script src="{{ STATIC_URL }}js/frontend/mixins-2b55fccd92.js">></script>
-    <script src="{{ STATIC_URL }}js/frontend/normal/new_post-a211895ca3.js">></script>
+    <script src="{{ STATIC_URL }}js/frontend/normal/new_post-f42701a875.js">></script>
 
     <script>
     $(function() {
