--- a/chendian/templates/frontend/base.html
+++ b/chendian/templates/frontend/base.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="http://7jpohw.com1.z0.glb.clouddn.com/bootstrap-fileinput-4.1.9/css/fileinput.min.css" />
     <link href="http://7jpohw.com1.z0.glb.clouddn.com/x-editable-1.5.1/bootstrap3-editable/css/bootstrap-editable.css" rel="stylesheet"/>
     <link href="http://7jpohw.com1.z0.glb.clouddn.com/select2-4.0.0/dist/css/select2.min.css" rel="stylesheet"/>
+    <link href="http://7jpohw.com1.z0.glb.clouddn.com/simditor-2.1.15/styles/simditor.css" rel="stylesheet"/>
 
     <link rel="stylesheet" href="{{ STATIC_URL }}css/site.css?12345" />
 
@@ -112,14 +113,14 @@
                   </select>
                 </div>
                 <div class="form-group">
-                  <label for="tags">标签（可以通过“标签名称+空格”的方式新增标签）</label>
+                  <label for="tags">标签（可以通过“标签名称+,”的方式新增标签）</label>
                   <select class="form-control" id="tags" name="tag_list" multiple>
                     <option value=""></option>
                   </select>
                 </div>
                 <div class="form-group">
-                  <label for="content">内容</label>
-                  <textarea class="form-control" id="content" name="content"
+                  <label for="new-post-content">内容</label>
+                  <textarea class="form-control" id="new-post-content" name="content"
                    rows="3" required></textarea>
                 </div>
               </form>
@@ -143,9 +144,14 @@
     <script src="http://7jpohw.com1.z0.glb.clouddn.com/bootstrap-fileinput-4.1.9/js/fileinput.min.js"></script>
     <script src="http://7jpohw.com1.z0.glb.clouddn.com/x-editable-1.5.1/bootstrap3-editable/js/bootstrap-editable.min.js"></script>
     <script src="http://7jpohw.com1.z0.glb.clouddn.com/select2-4.0.0/dist/js/select2.full.min.js"></script>
+    {# <script src="http://7jpohw.com1.z0.glb.clouddn.com/simditor-2.1.15/scripts/jquery.min.js"></script> #}
+    <script src="http://7jpohw.com1.z0.glb.clouddn.com/simditor-2.1.15/scripts/module.min.js"></script>
+    <script src="http://7jpohw.com1.z0.glb.clouddn.com/simditor-2.1.15/scripts/hotkeys.min.js"></script>
+    <script src="http://7jpohw.com1.z0.glb.clouddn.com/simditor-2.1.15/scripts/uploader.min.js"></script>
+    <script src="http://7jpohw.com1.z0.glb.clouddn.com/simditor-2.1.15/scripts/simditor.min.js"></script>
     <script src="{{ STATIC_URL }}js/site.js?1234"></script>
     <script src="{{ STATIC_URL }}js/frontend/mixins-2b55fccd92.js">></script>
-    <script src="{{ STATIC_URL }}js/frontend/normal/new_post-3fe5c79428.js">></script>
+    <script src="{{ STATIC_URL }}js/frontend/normal/new_post-b5b903efaa.js">></script>
 
     <script>
     $(function() {
