change static files domain

--- a/chendian/templates/frontend/feedback.html
+++ b/chendian/templates/frontend/feedback.html
@@ -6,7 +6,7 @@
 
 {% block content %}
 <p>
-  <img src="http://tmp-images.qiniudn.com/chendian/cattt.jpg" style="max-width: 100%"/>
+  <img src="https://dn-tmp.qbox.me/chendian/cattt.jpg" style="max-width: 100%"/>
   欢迎到此吐个槽儿~~~
 </p>
 {% endblock content %}
