--- a/chendian/templates/base.html
+++ b/chendian/templates/base.html
@@ -4,12 +4,12 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="shortcut icon" type="image/ico" href="http://tmp-images.qiniudn.com/chendian/cat_mouse_reading.jpg" />
+    <link rel="shortcut icon" type="image/ico" href="https://dn-tmp.qbox.me/chendian/cat_mouse_reading.jpg" />
     <title>{% block title %}沉淀书会后台管理{% endblock title %} </title>
-    <link rel="stylesheet" href="http://tmp-images.qiniudn.com/chendian/libs/jquery.datetimepicker.css" />
-    <link rel="stylesheet" href="http://tmp-images.qiniudn.com/chendian/libs/normalize.css" />
-    <link rel="stylesheet" href="http://tmp-images.qiniudn.com/bootstrap-3.3.2/css/bootstrap.min.css" />
-<link href="http://tmp-images.qiniudn.com/bootstrap-fileinput-4.1.9/css/fileinput.min.css" rel="stylesheet"/>
+    <link rel="stylesheet" href="https://dn-tmp.qbox.me/chendian/libs/jquery.datetimepicker.css" />
+    <link rel="stylesheet" href="https://dn-tmp.qbox.me/chendian/libs/normalize.css" />
+    <link rel="stylesheet" href="https://dn-tmp.qbox.me/bootstrap-3.3.2/css/bootstrap.min.css" />
+<link href="https://dn-tmp.qbox.me/bootstrap-fileinput-4.1.9/css/fileinput.min.css" rel="stylesheet"/>
     <link rel="stylesheet" href="{{ STATIC_URL }}css/site.css" />
     <style>
       body {
@@ -60,11 +60,11 @@
           {% block content %}{% endblock content %}
       </div>
 
-    <script src="http://tmp-images.qiniudn.com/chendian/libs/jquery.2.1.3.min.js"></script>
-    <script src="http://tmp-images.qiniudn.com/bootstrap-3.3.2/js/bootstrap.min.js"></script>
-    <script src="http://tmp-images.qiniudn.com/bootstrap-fileinput-4.1.9/js/fileinput.min.js"></script>
-    <script src="http://tmp-images.qiniudn.com/chendian/libs/jquery.datetimepicker.js"></script>
-    <script src="http://tmp-images.qiniudn.com/chendian/libs/mustache.min.js"></script>
+    <script src="https://dn-tmp.qbox.me/chendian/libs/jquery.2.1.3.min.js"></script>
+    <script src="https://dn-tmp.qbox.me/bootstrap-3.3.2/js/bootstrap.min.js"></script>
+    <script src="https://dn-tmp.qbox.me/bootstrap-fileinput-4.1.9/js/fileinput.min.js"></script>
+    <script src="https://dn-tmp.qbox.me/chendian/libs/jquery.datetimepicker.js"></script>
+    <script src="https://dn-tmp.qbox.me/chendian/libs/mustache.min.js"></script>
     <script>
       $(document).ready(function() {
         $("#datetime_start").datetimepicker({
