--- a/chendian/templates/frontend/base.html
+++ b/chendian/templates/frontend/base.html
@@ -4,14 +4,14 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="shortcut icon" type="image/ico" href="http://7jpohw.com1.z0.glb.clouddn.com/chendian/cat_mouse_reading.jpg" />
+    <link rel="shortcut icon" type="image/ico" href="https://dn-tmp.qbox.me/chendian/cat_mouse_reading.jpg" />
     <title>{% block title %}沉淀书会{% endblock title %} </title>
-    <link rel="stylesheet" href="http://7jpohw.com1.z0.glb.clouddn.com/chendian/libs/normalize.css" />
-    <link rel="stylesheet" href="http://7jpohw.com1.z0.glb.clouddn.com/bootstrap-3.3.2/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="http://7jpohw.com1.z0.glb.clouddn.com/bootstrap-fileinput-4.1.9/css/fileinput.min.css" />
-    <link href="http://7jpohw.com1.z0.glb.clouddn.com/x-editable-1.5.1/bootstrap3-editable/css/bootstrap-editable.css" rel="stylesheet"/>
-    <link href="http://7jpohw.com1.z0.glb.clouddn.com/select2-4.0.0/dist/css/select2.min.css" rel="stylesheet"/>
-    <link href="http://7jpohw.com1.z0.glb.clouddn.com/simditor-2.1.15/styles/simditor.css" rel="stylesheet"/>
+    <link rel="stylesheet" href="https://dn-tmp.qbox.me/chendian/libs/normalize.css" />
+    <link rel="stylesheet" href="https://dn-tmp.qbox.me/bootstrap-3.3.2/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="https://dn-tmp.qbox.me/bootstrap-fileinput-4.1.9/css/fileinput.min.css" />
+    <link href="https://dn-tmp.qbox.me/x-editable-1.5.1/bootstrap3-editable/css/bootstrap-editable.css" rel="stylesheet"/>
+    <link href="https://dn-tmp.qbox.me/select2-4.0.0/dist/css/select2.min.css" rel="stylesheet"/>
+    <link href="https://dn-tmp.qbox.me/simditor-2.1.15/styles/simditor.css" rel="stylesheet"/>
 
     <link rel="stylesheet" href="{{ STATIC_URL }}css/site.css?12345" />
 
@@ -138,17 +138,18 @@
       </div>
     </footer>
 
-    <script src="http://7jpohw.com1.z0.glb.clouddn.com/chendian/libs/jquery.2.1.3.min.js"></script>
-    <script src="http://7jpohw.com1.z0.glb.clouddn.com/bootstrap-3.3.2/js/bootstrap.min.js"></script>
-    <script src="http://7jpohw.com1.z0.glb.clouddn.com/chendian/libs/react-0.13.3/build/react.min.js"</script>
-    <script src="http://7jpohw.com1.z0.glb.clouddn.com/bootstrap-fileinput-4.1.9/js/fileinput.min.js"></script>
-    <script src="http://7jpohw.com1.z0.glb.clouddn.com/x-editable-1.5.1/bootstrap3-editable/js/bootstrap-editable.min.js"></script>
-    <script src="http://7jpohw.com1.z0.glb.clouddn.com/select2-4.0.0/dist/js/select2.full.min.js"></script>
-    {# <script src="http://7jpohw.com1.z0.glb.clouddn.com/simditor-2.1.15/scripts/jquery.min.js"></script> #}
-    <script src="http://7jpohw.com1.z0.glb.clouddn.com/simditor-2.1.15/scripts/module.min.js"></script>
-    <script src="http://7jpohw.com1.z0.glb.clouddn.com/simditor-2.1.15/scripts/hotkeys.min.js"></script>
-    <script src="http://7jpohw.com1.z0.glb.clouddn.com/simditor-2.1.15/scripts/uploader.min.js"></script>
-    <script src="http://7jpohw.com1.z0.glb.clouddn.com/simditor-2.1.15/scripts/simditor.min.js"></script>
+    <script src="https://dn-tmp.qbox.me/chendian/libs/jquery.2.1.3.min.js"></script>
+    <script src="https://dn-tmp.qbox.me/bootstrap-3.3.2/js/bootstrap.min.js"></script>
+    <script src="https://dn-tmp.qbox.me/chendian/libs/react-0.13.3/build/react.min.js"</script>
+    <script src="https://dn-tmp.qbox.me/bootstrap-fileinput-4.1.9/js/fileinput.min.js"></script>
+    <script src="https://dn-tmp.qbox.me/x-editable-1.5.1/bootstrap3-editable/js/bootstrap-editable.min.js"></script>
+    <script src="https://dn-tmp.qbox.me/select2-4.0.0/dist/js/select2.full.min.js"></script>
+    {# <script src="https://dn-tmp.qbox.me/simditor-2.1.15/scripts/jquery.min.js"></script> #}
+    <script src="https://dn-tmp.qbox.me/simditor-2.1.15/scripts/module.min.js"></script>
+    <script src="https://dn-tmp.qbox.me/simditor-2.1.15/scripts/hotkeys.min.js"></script>
+    <script src="https://dn-tmp.qbox.me/simditor-2.1.15/scripts/uploader.min.js"></script>
+    <script src="https://dn-tmp.qbox.me/simditor-2.1.15/scripts/simditor.min.js"></script>
+    <script src="https://dn-tmp.qbox.me/xss-filters.1.2.4.min.js"></script>
     <script src="{{ STATIC_URL }}js/site.js?1234"></script>
     <script src="{{ STATIC_URL }}js/frontend/mixins-2b55fccd92.js">></script>
     <script src="{{ STATIC_URL }}js/frontend/normal/new_post-b5b903efaa.js">></script>
