--- a/chendian/templates/frontend/base.html
+++ b/chendian/templates/frontend/base.html
@@ -11,7 +11,8 @@
     <link rel="stylesheet" href="https://dn-tmp.qbox.me/bootstrap-fileinput-4.1.9/css/fileinput.min.css" />
     <link href="https://dn-tmp.qbox.me/x-editable-1.5.1/bootstrap3-editable/css/bootstrap-editable.css" rel="stylesheet"/>
     <link href="https://dn-tmp.qbox.me/select2-4.0.0/dist/css/select2.min.css" rel="stylesheet"/>
-    <link href="https://dn-tmp.qbox.me/simditor-2.1.15/styles/simditor.css" rel="stylesheet"/>
+    <link href="https://dn-tmp.qbox.me/summernote-0.6.9/summernote.css" rel="stylesheet"/>
+    <link href="https://dn-tmp.qbox.me/font-awesome-4.3.0/css/font-awesome.min.css" rel="stylesheet"/>
 
     <link rel="stylesheet" href="{{ STATIC_URL }}css/site.css?12345" />
 
@@ -50,7 +51,11 @@
           <li><a href="{% url "frontend:book_list" %}">书籍</a></li>
           <li><a href="{% url "frontend:member_list" %}">成员</a></li>
           <li><a href="/feedback/">吐槽</a></li>
-          <li><span class="btn btn-primary" data-toggle="modal" data-target=".bs-new-post-modal-lg">投稿</span></li>
+          <li>
+            <a href="javascript: void(0);" data-toggle="modal" data-target=".bs-new-post-modal-lg">
+              <i class="fa fa-paw fa-lg"></i> 投稿
+            </a>
+          </li>
         </ul>
         <ul class="nav navbar-nav navbar-right">
           {% if request.user.is_staff %}
@@ -91,48 +96,7 @@
       </div>
 
     <footer class="footer">
-      <div class="modal fade bs-new-post-modal-lg" tabindex="-1" role="dialog" aria-labelledby="newPostModalLabel" id="newPostModal">
-        <div class="modal-dialog modal-lg">
-          <div class="modal-content">
-            <div class="modal-header">
-              <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-              <h4 class="modal-title" id="newPostModalLabel">投稿</h4>
-            </div>
-            <div class="modal-body">
-              <form id="newPostForm">
-                <div class="form-group">
-                  <label for="title">标题</label>
-                  <input type="text" class="form-control" id="title"
-                   placeholder="标题" required name="title">
-                </div>
-                <div class="form-group">
-                  <label for="categories">分类</label>
-                  <select class="form-control" id="categories"
-                    name="category_list" required multiple>
-                    <option value=""></option>
-                  </select>
-                </div>
-                <div class="form-group">
-                  <label for="tags">标签（可以通过“标签名称+,”的方式新增标签）</label>
-                  <select class="form-control" id="tags" name="tag_list" multiple>
-                    <option value=""></option>
-                  </select>
-                </div>
-                <div class="form-group">
-                  <label for="new-post-content">内容</label>
-                  <textarea class="form-control" id="new-post-content" name="content"
-                   rows="3" required></textarea>
-                </div>
-              </form>
-            </div>
-            <div class="modal-footer">
-              <button type="button" class="btn btn-default" data-dismiss="modal">关闭</button>
-              <button type="button" class="btn btn-primary" id="newPostButton">投递</button>
-            </div>
-          </div> <!-- /.modal-content -->
-        </div> <!-- /.modal-dialog -->
-      </div> <!-- /.modal -->
-
+      {% include "frontend/new_post_form.html" %}
       <div class="container">
         {% block footer %}{% endblock %}
       </div>
@@ -144,15 +108,11 @@
     <script src="https://dn-tmp.qbox.me/bootstrap-fileinput-4.1.9/js/fileinput.min.js"></script>
     <script src="https://dn-tmp.qbox.me/x-editable-1.5.1/bootstrap3-editable/js/bootstrap-editable.min.js"></script>
     <script src="https://dn-tmp.qbox.me/select2-4.0.0/dist/js/select2.full.min.js"></script>
-    {# <script src="https://dn-tmp.qbox.me/simditor-2.1.15/scripts/jquery.min.js"></script> #}
-    <script src="https://dn-tmp.qbox.me/simditor-2.1.15/scripts/module.min.js"></script>
-    <script src="https://dn-tmp.qbox.me/simditor-2.1.15/scripts/hotkeys.min.js"></script>
-    <script src="https://dn-tmp.qbox.me/simditor-2.1.15/scripts/uploader.min.js"></script>
-    <script src="https://dn-tmp.qbox.me/simditor-2.1.15/scripts/simditor.min.js"></script>
+    <script src="https://dn-tmp.qbox.me/summernote-0.6.9/summernote.min.js"></script>
     <script src="https://dn-tmp.qbox.me/xss-filters.1.2.4.min.js"></script>
     <script src="{{ STATIC_URL }}js/site.js?1234"></script>
     <script src="{{ STATIC_URL }}js/frontend/mixins-2b55fccd92.js">></script>
-    <script src="{{ STATIC_URL }}js/frontend/normal/new_post-47280e6648.js">></script>
+    <script src="{{ STATIC_URL }}js/frontend/normal/new_post-3014db926b.js">></script>
 
     <script>
     $(function() {
