自定义文本框工具栏，提交成功后刷新页面

--- a/chendian/templates/frontend/base.html
+++ b/chendian/templates/frontend/base.html
@@ -109,10 +109,11 @@
     <script src="https://dn-tmp.qbox.me/x-editable-1.5.1/bootstrap3-editable/js/bootstrap-editable.min.js"></script>
     <script src="https://dn-tmp.qbox.me/select2-4.0.0/dist/js/select2.full.min.js"></script>
     <script src="https://dn-tmp.qbox.me/summernote-0.6.9/summernote.min.js"></script>
+    <script src="https://dn-tmp.qbox.me/summernote-0.6.9/lang/summernote-zh-CN.js"></script>
     <script src="https://dn-tmp.qbox.me/xss-filters.1.2.4.min.js"></script>
     <script src="{{ STATIC_URL }}js/site.js?1234"></script>
     <script src="{{ STATIC_URL }}js/frontend/mixins-2b55fccd92.js">></script>
-    <script src="{{ STATIC_URL }}js/frontend/normal/new_post-3014db926b.js">></script>
+    <script src="{{ STATIC_URL }}js/frontend/normal/new_post-0f4ac6c051.js">></script>
 
     <script>
     $(function() {
