--- a/chendian/templates/frontend/book/detail.html
+++ b/chendian/templates/frontend/book/detail.html
@@ -13,32 +13,22 @@
 <div class="row book-detail">
   <div class="col-md-5">
     <div class="panel panel-default">
-      <div class="panel-body">
+      <div class="panel-heading">
+        <span class="text-left">
+          <a href="javascript: void(0);" data-toggle="modal"
+            data-target=".bs-edit-book-modal-lg">更新书籍信息</a>
+        </span>
         {% if request.user.is_staff %}
-        <div class="text-right">
+        <span class="text-right">
           <a href="{% url "book:book_list" %}?filter_by=id&filter_value={{ id }}">后台页面</a>
-        </div>
+        </span>
         {% endif %}
+      </div>
+      <div class="panel-body">
         <div id="content" data-id="{{ id }}"></div>
       </div>
     </div>
 
-    <div class="panel panel-default">
-      <div class="panel-heading" id="headingTwo">
-        <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-          修改封面
-        </a>
-      </div>
-
-      <div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
-        <div class="panel-body">
-          <div>
-            <input type="file" class="file" id="change-cover-input" name="file">
-          </div>
-          {# <div class="alert alert-success" role="alert"></div> #}
-        </div>
-      </div>
-    </div>
   </div>
 
   <div class="col-md-7 checkin-list">
@@ -52,12 +42,57 @@
   </div>
 
 </div>
+
+<div class="modal fade bs-edit-book-modal-lg" tabindex="-1" role="dialog" aria-labelledby="editBookModalLabel" id="editBookModal">
+  <div class="modal-dialog modal-lg">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title" id="editBookModalLabel">编辑书籍信息</h4>
+      </div>
+      <div class="modal-body">
+        <form id="editBookForm">
+          <div class="form-group">
+            <label for="name">书名</label>
+            <input type="text" class="form-control" id="name"
+            placeholder="书名" required name="name">
+          </div>
+          <div class="form-group">
+            <label for="author">作者</label>
+            <input type="text" class="form-control" id="author"
+            placeholder="作者" required name="author">
+          </div>
+          <div class="form-group">
+            <label for="isbn">ISBN</label>
+            <input type="text" class="form-control" id="isbn"
+            placeholder="ISBN" name="isbn">
+          </div>
+          <div class="form-group">
+            <label for="douban_url">豆瓣页面</label>
+            <input type="text" class="form-control" id="douban_url"
+            placeholder="douban_url" name="douban_url">
+          </div>
+          <div class="form-group">
+            <label for="description">简介</label>
+            <textarea class="form-control" id="description" name="description"
+              rows="3" required></textarea>
+          </div>
+        </form>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">关闭</button>
+        <button type="button" class="btn btn-primary" id="editBookButton">更新</button>
+      </div>
+    </div> <!-- /.modal-content -->
+  </div> <!-- /.modal-dialog -->
+</div> <!-- /.modal -->
 {% endblock content %}
 
 
 {% block extra_js %}
 <script src="{{ STATIC_URL }}js/frontend/checkin_list-0c3641c161.js"> </script>
-<script src="{{ STATIC_URL }}js/frontend/book_detail-91e1a5a232.js"></script>
+<script src="{{ STATIC_URL }}js/frontend/book_detail-efb8362779.js"></script>
+<script src="{{ STATIC_URL }}js/frontend/normal/book_edit-8bfdb6f039.js"> </script>
 <script>
   $("#change-cover-input").fileinput({
     showCaption: false,
