--- a/chendian/templates/frontend/base.html
+++ b/chendian/templates/frontend/base.html
@@ -25,6 +25,9 @@
       }
       input.select2-search__field {
       }
+      .upload-img {
+        max-width: 15%;
+      }
     </style>
 
     {% block extra_head %}{% endblock extra_head %}
@@ -112,7 +115,7 @@
     <script src="https://dn-tmp.qbox.me/js-xss.v0.2.2.min.js"></script>
     <script src="https://dn-tmp.qbox.me/dropzone-4.0.1/min/dropzone.min.js"></script>
     <script src="{{ STATIC_URL }}js/site.js?1234"></script>
-    <script src="{{ STATIC_URL }}js/frontend/normal/utils-0557bbbcf6.js">></script>
+    <script src="{{ STATIC_URL }}js/frontend/normal/utils-44bdc9dc76.js">></script>
     <script src="{{ STATIC_URL }}js/frontend/mixins-2b55fccd92.js"></script>
     <script src="{{ STATIC_URL }}js/frontend/normal/new_post-962097c29c.js">></script>
 
