--- a/chendian/templates/frontend/base.html
+++ b/chendian/templates/frontend/base.html
@@ -8,11 +8,10 @@
     <title>{% block title %}沉淀书会{% endblock title %} </title>
     <link rel="stylesheet" href="https://dn-tmp.qbox.me/chendian/libs/normalize.css" />
     <link rel="stylesheet" href="https://dn-tmp.qbox.me/bootstrap-3.3.2/css/bootstrap.min.css" />
-    <link href="https://dn-tmp.qbox.me/x-editable-1.5.1/bootstrap3-editable/css/bootstrap-editable.css" rel="stylesheet"/>
     <link href="https://dn-tmp.qbox.me/select2-4.0.0/dist/css/select2.min.css" rel="stylesheet"/>
     <link href="https://dn-tmp.qbox.me/summernote-0.6.9/summernote.css" rel="stylesheet"/>
     <link href="https://dn-tmp.qbox.me/font-awesome-4.3.0/css/font-awesome.min.css" rel="stylesheet"/>
-    {# <link href="https://dn-tmp.qbox.me/dropzone-4.0.1/min/basic.min.css" rel="stylesheet"/> #}
+    <link href="https://dn-tmp.qbox.me/dropzone-4.0.1/min/basic.min.css" rel="stylesheet"/>
     <link href="https://dn-tmp.qbox.me/dropzone-4.0.1/min/dropzone.min.css" rel="stylesheet"/>
     <link rel="stylesheet" href="{{ STATIC_URL }}css/site.css?12345" />
 
@@ -107,13 +106,14 @@
 
     <script src="https://dn-tmp.qbox.me/chendian/libs/jquery.2.1.3.min.js"></script>
     <script src="https://dn-tmp.qbox.me/bootstrap-3.3.2/js/bootstrap.min.js"></script>
-    <script src="https://dn-tmp.qbox.me/chendian/libs/react-0.13.3/build/react.min.js"</script>
-    <script src="https://dn-tmp.qbox.me/x-editable-1.5.1/bootstrap3-editable/js/bootstrap-editable.min.js"></script>
+    <script src="https://dn-tmp.qbox.me/chendian/libs/react-0.13.3/build/react.min.js"></script>
     <script src="https://dn-tmp.qbox.me/select2-4.0.0/dist/js/select2.full.min.js"></script>
     <script src="https://dn-tmp.qbox.me/summernote-0.6.9/summernote.min.js"></script>
     <script src="https://dn-tmp.qbox.me/summernote-0.6.9/lang/summernote-zh-CN.js"></script>
     <script src="https://dn-tmp.qbox.me/js-xss.v0.2.2.min.js"></script>
     <script src="https://dn-tmp.qbox.me/dropzone-4.0.1/min/dropzone.min.js"></script>
+    <script src="https://dn-tmp.qbox.me/isMobile/0.3.9/isMobile.min.js"></script>
+
     <script src="{{ STATIC_URL }}js/site.js?1234"></script>
     <script src="{{ STATIC_URL }}js/frontend/normal/utils-44bdc9dc76.js">></script>
     <script src="{{ STATIC_URL }}js/frontend/mixins-2b55fccd92.js"></script>
