--- a/chendian/templates/frontend/base.html
+++ b/chendian/templates/frontend/base.html
@@ -13,6 +13,7 @@
     <link href="https://dn-tmp.qbox.me/font-awesome-4.3.0/css/font-awesome.min.css" rel="stylesheet"/>
     <link href="https://dn-tmp.qbox.me/dropzone-4.0.1/min/basic.min.css" rel="stylesheet"/>
     <link href="https://dn-tmp.qbox.me/dropzone-4.0.1/min/dropzone.min.css" rel="stylesheet"/>
+    <link href="https://dn-tmp.qbox.me/jquery-ajax-progress-bar/jquery-ajax-progress-bar.css" rel="stylesheet"/>
     <link rel="stylesheet" href="{{ STATIC_URL }}css/site.css?12345" />
 
     <style>
@@ -113,6 +114,8 @@
     <script src="https://dn-tmp.qbox.me/js-xss.v0.2.2.min.js"></script>
     <script src="https://dn-tmp.qbox.me/dropzone-4.0.1/min/dropzone.min.js"></script>
     <script src="https://dn-tmp.qbox.me/isMobile/0.3.9/isMobile.min.js"></script>
+    <script src="https://dn-tmp.qbox.me/isMobile/0.3.9/isMobile.min.js"></script>
+    <script src="https://dn-tmp.qbox.me/jquery-ajax-progress-bar/jquery-ajax-progress-bar.js"></script>
 
     <script src="{{ STATIC_URL }}js/site.js?1234"></script>
     <script src="{{ STATIC_URL }}js/frontend/normal/utils-44bdc9dc76.js">></script>
