--- a/chendian/templates/frontend/base.html
+++ b/chendian/templates/frontend/base.html
@@ -118,9 +118,9 @@
     <script src="https://dn-tmp.qbox.me/jquery-ajax-progress-bar/jquery-ajax-progress-bar.js"></script>
 
     <script src="{{ STATIC_URL }}js/site.js?1234"></script>
-    <script src="{{ STATIC_URL }}js/frontend/normal/utils-0bf6c62d66.js">></script>
+    <script src="{{ STATIC_URL }}js/frontend/normal/utils-93fc6e3a74.js"></script>
     <script src="{{ STATIC_URL }}js/frontend/mixins-2b55fccd92.js"></script>
-    <script src="{{ STATIC_URL }}js/frontend/normal/new_post-962097c29c.js">></script>
+    <script src="{{ STATIC_URL }}js/frontend/normal/new_post-1c32c3d5bd.js"></script>
 
     <script>
     $(function() {
