change default image

--- a/chendian/static/css/site.css
+++ b/chendian/static/css/site.css
@@ -1,7 +1,7 @@
 body {
   background: #E7EAEC;
   color: #222527;
-  background-image: url("http://tmp-images.qiniudn.com/lark/noise-grey.v1.png");
+  background-image: url("https://dn-tmp.qbox.me/lark/noise-grey.v1.png");
 }
 .footer {
   margin-top: 10px;
