第一次打开页面时，显示 loading 图片等待数据加载完成

--- a/chendian/templates/frontend/blog/article_list.html
+++ b/chendian/templates/frontend/blog/article_list.html
@@ -6,6 +6,9 @@
 {% block content %}
 <div class="row article-list">
   <div id="article-list">
+    <div class="loading">
+      <img src="https://dn-tmp.qbox.me/loading/red/loading-bars.svg" />
+    </div>
   </div>
 </div>
 {% endblock content %}
