--- a/chendian/templates/frontend/book/index.html
+++ b/chendian/templates/frontend/book/index.html
@@ -11,7 +11,11 @@
   </form>
 </div>
 
-<div class="col-md-12" id="content"></div>
+<div class="col-md-12" id="content">
+  <div class="loading">
+    <img src="https://dn-tmp.qbox.me/loading/red/loading-bars.svg" />
+  </div>
+</div>
 {% endblock content %}
 
 
