--- a/chendian/templates/frontend/member/detail.html
+++ b/chendian/templates/frontend/member/detail.html
@@ -28,7 +28,11 @@
       </div>
 
       <div class="panel-body">
-        <div id="profile" data-id="{{ id }}"></div>
+        <div id="profile" data-id="{{ id }}">
+          <div class="loading">
+            <img src="https://dn-tmp.qbox.me/loading/red/loading-bars.svg" />
+          </div>
+        </div>
       </div>
     </div>
 
@@ -41,7 +45,11 @@
 
       <div id="collapseThree" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
         <div class="panel-body">
-          <div id="read-books" class="text-center" data-id={{ id }}></div>
+          <div id="read-books" class="text-center" data-id={{ id }}>
+            <div class="loading">
+              <img src="https://dn-tmp.qbox.me/loading/red/loading-bars.svg" />
+            </div>
+          </div>
         </div>
       </div>
     </div>
@@ -52,7 +60,11 @@
       <div class="panel panel-default">
         <div class="panel-heading">打卡记录</div>
         <div class="panel-body">
-          <div id="checkin-list"></div>
+          <div id="checkin-list">
+            <div class="loading">
+              <img src="https://dn-tmp.qbox.me/loading/red/loading-bars.svg" />
+            </div>
+          </div>
         </div>
         <div class="panel-footer clearfix"></div>
       </div>
