--- a/chendian/templates/frontend/member/index.html
+++ b/chendian/templates/frontend/member/index.html
@@ -5,7 +5,11 @@
     <div class="panel panel-default">
       <div class="panel-heading">成员列表</div>
       <div class="panel-body">
-        <div id="member-list"></div>
+        <div id="member-list">
+          <div class="loading">
+            <img src="https://dn-tmp.qbox.me/loading/red/loading-bars.svg" />
+          </div>
+        </div>
       </div>
       <div class="panel-footer clearfix"></div>
     </div>
