--- a/chendian/templates/frontend/book/detail.html
+++ b/chendian/templates/frontend/book/detail.html
@@ -25,7 +25,11 @@
         {% endif %}
       </div>
       <div class="panel-body">
-        <div id="content" data-id="{{ id }}"></div>
+        <div id="content" data-id="{{ id }}">
+          <div class="loading">
+            <img src="https://dn-tmp.qbox.me/loading/red/loading-bars.svg" />
+          </div>
+        </div>
       </div>
     </div>
   </div>
@@ -34,7 +38,11 @@
     <div class="panel panel-default">
       <div class="panel-heading">有 <span class="text-right" id="reader-count">0</span> 个小伙伴阅读过本书</div>
       <div class="panel-body">
-        <div id="checkin-list"></div>
+        <div id="checkin-list">
+          <div class="loading">
+            <img src="https://dn-tmp.qbox.me/loading/red/loading-bars.svg" />
+          </div>
+        </div>
       </div>
       <div class="panel-footer clearfix"></div>
     </div>
