--- a/chendian/templates/frontend/book/index.html
+++ b/chendian/templates/frontend/book/index.html
@@ -2,10 +2,10 @@
 
 {% block content %}
 <div class="col-md-4 col-md-offset-4 search-box">
-  <form class="form-inline">
+  <form class="form-inline" action="/b/">
     <div class="form-group">
-      <input type="text" class="form-control" name="q" placeholder="请输入书籍名称"
-       value="{{ request.GET.q }}">
+      <input type="text" class="form-control" name="name" placeholder="请输入书籍名称"
+       value="{{ request.GET.name }}">
     </div>
     <button type="submit" class="btn btn-primary">喵~</button>
   </form>
@@ -20,6 +20,6 @@
 
 
 {% block extra_js %}
-<script src="{{ STATIC_URL }}js/frontend/book_list-47bd630712.js"> </script>
+<script src="{{ STATIC_URL }}js/frontend/book_list-4f002b4473.js"> </script>
 {% endblock extra_js %}
 
