投稿详情页面增加 loading 图标

--- a/chendian/templates/frontend/blog/article_detail.html
+++ b/chendian/templates/frontend/blog/article_detail.html
@@ -5,7 +5,11 @@
 
 {% block content %}
 <div class="row article-detail">
-  <div id="article-detail" data-id="{{ id }}"></div>
+  <div id="article-detail" data-id="{{ id }}">
+    <div class="loading">
+      <img src="https://dn-tmp.qbox.me/loading/red/loading-bars.svg" />
+    </div>
+  </div>
 </div>
 {% endblock content %}
 
