--- a/chendian/templates/base.html
+++ b/chendian/templates/base.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://dn-tmp.qbox.me/chendian/libs/normalize.css" />
     <link rel="stylesheet" href="https://dn-tmp.qbox.me/bootstrap-3.3.2/css/bootstrap.min.css" />
 <link href="https://dn-tmp.qbox.me/bootstrap-fileinput-4.1.9/css/fileinput.min.css" rel="stylesheet"/>
-    <link rel="stylesheet" href="{{ STATIC_URL }}css/site.css" />
+    <link rel="stylesheet" href="{{ STATIC_URL }}css/src/site.css" />
     <style>
       body {
         padding-top: 70px;
