--- a/chendian/templates/frontend/base.html
+++ b/chendian/templates/frontend/base.html
@@ -107,7 +107,7 @@
 
     <script src="https://dn-tmp.qbox.me/chendian/libs/jquery.2.1.3.min.js"></script>
     <script src="https://dn-tmp.qbox.me/bootstrap-3.3.2/js/bootstrap.min.js"></script>
-    <script src="https://dn-tmp.qbox.me/chendian/libs/react-0.13.3/build/react.min.js"></script>
+    <script src="https://dn-tmp.qbox.me/chendian/libs/react-0.13.3/build/react.js"></script>
     <script src="https://dn-tmp.qbox.me/select2-4.0.0/dist/js/select2.full.min.js"></script>
     <script src="https://dn-tmp.qbox.me/summernote-0.6.9/summernote.min.js"></script>
     <script src="https://dn-tmp.qbox.me/summernote-0.6.9/lang/summernote-zh-CN.js"></script>
@@ -118,8 +118,8 @@
     <script src="https://dn-tmp.qbox.me/jquery-ajax-progress-bar/jquery-ajax-progress-bar.js"></script>
 
     <script src="{{ STATIC_URL }}js/site.js?1234"></script>
-    <script src="{{ STATIC_URL }}js/frontend/normal/utils-93fc6e3a74.js"></script>
-    <script src="{{ STATIC_URL }}js/frontend/mixins-2b55fccd92.js"></script>
+    <script src="{{ STATIC_URL }}js/frontend/normal/utils-7921d2a9d2.js"></script>
+    <script src="{{ STATIC_URL }}js/frontend/mixins-96c0344e6b.js"></script>
     <script src="{{ STATIC_URL }}js/frontend/normal/new_post-1c32c3d5bd.js"></script>
 
     <script>
