--- a/chendian/static/css/src/site.scss
+++ b/chendian/static/css/src/site.scss
@@ -12,33 +12,41 @@ body {
   width: 100%;
   max-width: 100%;
 }
+
 .form-login {
   max-width: 330px;
   padding: 15px;
   margin: 0 auto;
 }
-.form-login .form-control {
-  height: auto;
-  padding: 10px;
-}
-.form-login input[type="text"] {
-  margin-bottom: -1px;
-  border-bottom-left-radius: 0;
-  border-bottom-right-radius: 0;
-}
-.form-login input[type="password"] {
-  margin-bottom: 10px;
-  border-top-left-radius: 0;
-  border-top-right-radius: 0;
+.form-login {
+  .form-control {
+    height: auto;
+    padding: 10px;
+  }
+
+  input[type="text"] {
+    margin-bottom: -1px;
+    border-bottom-left-radius: 0;
+    border-bottom-right-radius: 0;
+  }
+
+  input[type="password"] {
+    margin-bottom: 10px;
+    border-top-left-radius: 0;
+    border-top-right-radius: 0;
+  }
 }
 
-.checkin-list .panel-body {
-  padding: 15px 0;
-}
-.checkin-list .panel-body .pager {
-  margin-bottom: 0;
-  padding-left: 5px;
-  padding-right: 5px;
+.checkin-list {
+  .panel-body {
+    padding: 15px 0;
+  }
+
+  .panel-body .pager {
+    margin-bottom: 0;
+    padding-left: 5px;
+    padding-right: 5px;
+  }
 }
 
 .think,
@@ -67,27 +75,30 @@ body {
   margin: 0 10px 10px 0;
   width: 100px;
 }
-.book-list .book img {
-  width: 101px;
-  height: 146px;
+
+.book-list .book {
+  img {
+    width: 101px;
+    height: 146px;
+    border-radius: 6px 6px 0 0;
+  }
+
+  span {
+    display: block;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    border-radius: 0 0 6px 6px;
+    margin-bottom: 0;
+    padding: 5px;
+    background-color: inherit;
+    border: none;
+  }
 }
+
 .book-info .cover img {
   width: 182px;
   height: 262px;
-}
-.book-list .book img {
-  border-radius: 6px 6px 0 0;
-}
-.book-list .book span {
-  display: block;
-  white-space: nowrap;
-  overflow: hidden;
-  text-overflow: ellipsis;
-  border-radius: 0 0 6px 6px;
-  margin-bottom: 0;
-  padding: 5px;
-  background-color: inherit;
-  border: none;
 }
 
 .member-info .avatar-120,
@@ -102,12 +113,14 @@ body {
   width: 64px;
   height: 64px;
 }
-.member-info .detail
+
+.member-info .detail,
 .book-info .detail {
   padding-top: 20px;
   padding-left: 0;
   word-wrap: break-word;
 }
+
 .member-info .description,
 .book-info .description {
   border-top: 1px solid #f0f0f0;
@@ -143,6 +156,7 @@ body {
 .article-meta a {
   margin-right: 5px;
 }
+
 .loading img {
   height: 4rem;
   padding-left: 45%;
