--- a/chendian/templates/frontend/member/detail.html
+++ b/chendian/templates/frontend/member/detail.html
@@ -88,9 +88,12 @@
           </div>
           <div class="form-group">
             <label for="cover_up">头像（点击图片上传头像）</label>
-            <a href="javascript: void(0);">
-              <img src="" class="upload-img" id="avatar_up" title="点击上传头像" />
-            </a>
+            <div class="parent uploading">
+              <a href="javascript: void(0);">
+                <img src="" class="upload-img" id="avatar_up" title="点击上传头像" />
+              </a>
+              <p class="uploading hide child">uploading...</p>
+            </div>
           </div>
           <div class="form-group">
             <label for="nick_name">昵称</label>
@@ -117,5 +120,5 @@
 {% block extra_js %}
 <script src="{{ STATIC_URL }}js/frontend/checkin_list-026a703fda.js"> </script>
 <script src="{{ STATIC_URL }}js/frontend/member_detail-55ed4b8f8a.js"> </script>
-<script src="{{ STATIC_URL }}js/frontend/normal/member_edit-744300e403.js"> </script>
+<script src="{{ STATIC_URL }}js/frontend/normal/member_edit-5cc2767cd0.js"> </script>
 {% endblock extra_js %}
