--- a/chendian/static/css/src/site.scss
+++ b/chendian/static/css/src/site.scss
@@ -9,6 +9,9 @@ body {
   margin-top: 10px;
   margin-bottom: 20px;
 }
+.clearfix {
+  clear: both;
+}
 
 .parent {
   position: relative;
@@ -83,6 +86,7 @@ body {
 .book-list .book {
   margin: 0 10px 10px 0;
   width: 100px;
+  float: left;
 }
 
 .book-list .book {
