增加"文章"导航项

--- a/chendian/templates/frontend/base.html
+++ b/chendian/templates/frontend/base.html
@@ -46,6 +46,7 @@
 
       <div class="collapse navbar-collapse" id="navbar-collapse-1">
         <ul class="nav navbar-nav">
+          <li><a href="{% url "frontend:article_list" %}">文章</a></li>
           <li><a href="{% url "frontend:book_list" %}">书籍</a></li>
           <li><a href="{% url "frontend:member_list" %}">成员</a></li>
           <li><a href="/feedback/">吐槽</a></li>
