--- a/chendian/templates/frontend/member/detail.html
+++ b/chendian/templates/frontend/member/detail.html
@@ -39,7 +39,7 @@
     <div class="panel panel-default">
       <div class="panel-heading" id="headingThree">
         <a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-        读过的书
+        读过的书<span id="read_count"></span>
         </a>
       </div>
 
@@ -119,6 +119,6 @@
 
 {% block extra_js %}
 <script src="{{ STATIC_URL }}js/frontend/checkin_list-8a8b306ba2.js"> </script>
-<script src="{{ STATIC_URL }}js/frontend/member_detail-942c1f5848.js"> </script>
+<script src="{{ STATIC_URL }}js/frontend/member_detail-4c24e239a9.js"> </script>
 <script src="{{ STATIC_URL }}js/frontend/normal/member_edit-f787a98e3d.js"> </script>
 {% endblock extra_js %}
