--- a/chendian/templates/frontend/base.html
+++ b/chendian/templates/frontend/base.html
@@ -108,7 +108,7 @@
     <script src="https://dn-tmp.qbox.me/jquery-ajax-progress-bar/jquery-ajax-progress-bar.js"></script>
 
     <script src="{{ STATIC_URL }}js/site.js?1234"></script>
-    <script src="{{ STATIC_URL }}js/frontend/normal/utils-d7f46aa97f.js"></script>
+    <script src="{{ STATIC_URL }}js/frontend/normal/utils-682963523d.js"></script>
     <script src="{{ STATIC_URL }}js/frontend/mixins-6240cf4876.js"></script>
     <script src="{{ STATIC_URL }}js/frontend/normal/new_post-1c32c3d5bd.js"></script>
 
@@ -118,6 +118,8 @@
         dataType: 'json',
         contentType: 'application/json'
       });
+
+      heightlightNav();
     });
     </script>
 
