书籍简介去掉 <br> 用 <p> ，同时行首空两格

--- a/chendian/static/css/src/site.scss
+++ b/chendian/static/css/src/site.scss
@@ -109,9 +109,15 @@ body {
   }
 }
 
-.book-info .cover img {
-  width: 182px;
-  height: 262px;
+.book-info {
+  .cover img {
+    width: 182px;
+    height: 262px;
+  }
+
+  .description {
+    text-indent: 2em;
+  }
 }
 
 .member-info .avatar-120,
