书籍列表图片 lazyloading

--- a/chendian/templates/frontend/book/index.html
+++ b/chendian/templates/frontend/book/index.html
@@ -20,6 +20,7 @@
 
 
 {% block extra_js %}
-<script src="{{ STATIC_URL }}js/frontend/book_list-03ae7bbf20.js"> </script>
+<script src="https://dn-tmp.qbox.me/libs/lazysizes/1.2.1/lazysizes.min.js"></script>
+<script src="{{ STATIC_URL }}js/frontend/book_list-271bd2c2f3.js"> </script>
 {% endblock extra_js %}
 
