--- a/chendian/templates/frontend/member/index.html
+++ b/chendian/templates/frontend/member/index.html
@@ -19,6 +19,7 @@
 
 
 {% block extra_js %}
-<script src="{{ STATIC_URL }}js/frontend/member_list-f53e9a6091.js"> </script>
+<script src="https://dn-tmp.qbox.me/libs/lazysizes/1.2.1/lazysizes.min.js"></script>
+<script src="{{ STATIC_URL }}js/frontend/member_list-d3ce3883cf.js"> </script>
 {% endblock extra_js %}
 
