--- a/chendian/templates/frontend/base.html
+++ b/chendian/templates/frontend/base.html
@@ -62,14 +62,14 @@
           {% endif %}
 
           <li>
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
+          <a href="javascript: void(0);" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
             {{ request.user.member.nick_name }}<span class="caret"></span>
           </a>
             <ul class="dropdown-menu" role="menu">
               {% if request.user.member %}
               <li><a href="{% url "frontend:member_detail" pk=request.user.member.id %}">修改个人信息</a></li>
               {% else %}
-              <li><a href="#">修改个人信息</a></li>
+              <li><a href="javascript: void(0);">修改个人信息</a></li>
               {% endif %}
               <li><a href="{% url "change_password" %}">修改密码</a></li>
             </ul>
@@ -108,8 +108,8 @@
     <script src="https://dn-tmp.qbox.me/jquery-ajax-progress-bar/jquery-ajax-progress-bar.js"></script>
 
     <script src="{{ STATIC_URL }}js/site.js?1234"></script>
-    <script src="{{ STATIC_URL }}js/frontend/normal/utils-c07714bc04.js"></script>
-    <script src="{{ STATIC_URL }}js/frontend/mixins-6b05466849.js"></script>
+    <script src="{{ STATIC_URL }}js/frontend/normal/utils-cee6e3422e.js"></script>
+    <script src="{{ STATIC_URL }}js/frontend/mixins-f44e702c5d.js"></script>
     <script src="{{ STATIC_URL }}js/frontend/normal/new_post-1c32c3d5bd.js"></script>
 
     <script>
